# llama-32-from-scratch

./: Makefile  README.md  pyproject.toml
src/: .gitignore  generate_example.py
